add comment. remove java 9 syntax