@@ -1,5 +1,6 @@
 package org.logstash.config.ir.expression;
 
+import com.google.common.collect.ImmutableMap;
 import org.logstash.common.SourceWithMetadata;
 import org.logstash.config.ir.CompiledPipeline;
 import org.logstash.config.ir.InvalidIRException;
@@ -10,6 +11,13 @@ import java.lang.reflect.InvocationTargetException;
 import java.util.Map;
 
 public class ExpressionSubstitution {
+    /**
+     * Replace ${VAR:defaultValue} in BinaryBooleanExpression, UnaryBooleanExpression and ValueExpression, excluding RegexValueExpression
+     * with the value in the following precedence: secret store, environment variable, default value
+     * @param cve The actual pattern matching take place
+     * @param expression The Expression to be substituted
+     * @return substituted Expression
+     */
     public static Expression substituteBoolExpression(ConfigVariableExpander cve, Expression expression) {
         try {
             if (expression instanceof BinaryBooleanExpression) {
@@ -28,8 +36,8 @@ public class ExpressionSubstitution {
                     return constructor.newInstance(unaryBoolExp.getSourceWithMetadata(), substitutedExp);
                 }
             } else if (expression instanceof ValueExpression && !(expression instanceof RegexValueExpression) && (((ValueExpression) expression).get() != null)) {
-                String key = "placeholder";
-                Map<String, Object> args = Map.of(key, ((ValueExpression) expression).get());
+                final String key = "placeholder";
+                Map<String, Object> args = ImmutableMap.of(key, ((ValueExpression) expression).get());
                 Map<String, Object> substitutedArgs = CompiledPipeline.expandConfigVariables(cve, args);
                 return new ValueExpression(expression.getSourceWithMetadata(), substitutedArgs.get(key));
             }
